--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,459 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: sans-serif;
+  color: #252525;
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a {
+  text-decoration: none;
+  color: #252525;
+}
+
+.container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 10px;
+}
+
+.btn {
+  text-transform: uppercase;
+  margin: 35px auto;
+  padding: 10px;
+  border: 1px solid rgba(0, 0, 0, 0.29);
+  cursor: pointer;
+  background: #fff;
+  font-size: 16px;
+  width: 250px;
+}
+
+.btn:hover {
+  border-color: rgba(0, 0, 0, 0.5);
+  text-decoration: none;
+}
+
+.btn:focus {
+  outline: 0;
+  font-weight: 700;
+  border-width: 2px;
+}
+
+.center {
+  text-align: center;
+}
+
+.active {
+  font-weight: bold;
+}
+
+
+/* NAVIGATION */
+
+.logout:hover{
+  cursor: pointer;
+}
+
+.active{
+  font-weight: bold;
+  border-bottom: 1px solid grey;
+}
+
+.inactive{
+  font-weight: normal;
+  border: none;
+}
+
+.nav {
+  width: 100%;
+  border-bottom: 1px solid lightgrey;
+  padding: 10px 0px 0px 0px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  text-decoration: none;
+  margin: 0px 0px -1px 0px;
+}
+
+.nav ul li {
+  padding-bottom: 0;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+}
+
+
+ul {
+  padding-left: 0;
+}
+
+li {
+  list-style-type: none;
+  padding: 10px;
+  text-decoration: none;
+}
+
+.profile{
+  padding: 0px !important;
+  margin: 0px;
+  justify-content: flex-end;
+}
+
+.avatar {
+  height: 40px;
+  border-radius: 25px;
+}
+
+.tweet {
+  width: 100%;
+  max-width: 590px;
+  padding: 10px;
+  display: flex;
+  margin: 0 auto;
+  border: 1px solid #dad7d7;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.tweet-info {
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+/* Hacky but less typing in the video */
+.tweet-info > div > span:first-child {
+  font-weight: bold;
+  margin-right: 5px;
+}
+.tweet-info > div > span:nth-child(2) {
+  color: #969696;
+  font-size: 16px;
+}
+.tweet-info > div > div {
+  color: #969696;
+  font-size: 15px;
+}
+.tweet-info > div > p {
+  font-size: 18px;
+  margin: 10px 0;
+}
+.tweet-icons {
+  display: flex;
+  align-items: center;
+}
+.tweet-icons > span {
+  color: #969696;
+  margin: 0 15px 0 5px;
+  font-size: 18px !important;
+}
+.tweet-icon {
+  font-size: 27px;
+  color: #697784;
+}
+.tweet-icon:hover {
+  color: #00b5d6;
+  cursor: pointer;
+}
+.replying-to {
+  border: none;
+  background: transparent;
+  margin: 0;
+  padding: 0;
+  color: #969696;
+  cursor: pointer;
+}
+
+.heart-button {
+  background: transparent;
+  border: none;
+}
+
+.new-tweet {
+  width: 100%;
+  max-width: 590px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+.textarea {
+  border-radius: 4px;
+  border: 1px solid #dad7d7;
+  padding: 10px;
+  font-size: 15px;
+  height: 100px;
+}
+
+.tweet-length {
+  text-align: right;
+  margin-top: 10px;
+  font-size: 20px;
+  color: #c3392a;
+}
+
+/* DASHBOARD */
+
+.pagecontainer {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.questionContainer{
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  width: 80%;
+  margin-top: 20px;
+}
+
+.headlineWrapper{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-bottom: 1px solid lightgrey;
+}
+
+.question{
+  border: 1px solid lightgrey;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column !important;
+  justify-content: center;
+  align-items: center;
+  width: 210px;
+  margin: 20px;
+}
+
+.questionsWrapper {
+  padding: 20px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.questionWrapper {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h5{
+  font-size: 18px;
+  margin: 0px 0px 10px 0px;
+}
+
+.datetime{
+  color: lightgrey;
+  margin: 0px;
+  font-size: 16px;
+}
+
+.buttonWrapper{
+  margin: 0px;
+  border-top: 1px solid lightgrey;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 20px 0px 20px 0px;
+}
+
+.questionButton{
+  border: 1px solid lightgreen;
+  color: lightgreen;
+  background-color: transparent;
+  padding: 10px 20px 10px 20px;
+  font-size: 18px;
+  width: 100%;
+  margin: 0px 20px 0px 20px;
+  text-align: center;
+}
+
+.questionButton:hover{
+  cursor: pointer;
+  border: 2px solid lightgreen;
+  font-weight: 500;
+}
+
+/* QUESTION PAGE */
+
+.questionImg {
+  height: 150px;
+  border-radius: 100px;
+}
+
+.answerContainer {
+  display: flex;
+  align-items: flex-end;
+}
+
+.answerBlock {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0px 30px 0px 30px;
+}
+
+.answerWrapper {
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.answerText {
+  padding: 20px 0px 20px 0px;
+  font-size: 18px;
+  background-color: lightgrey;
+  width: 100%;
+  text-align: center;
+}
+
+.answerButton {
+  font-size: 18px;
+  background-color: lightseagreen;
+  width: 100%;
+  border: none;
+  padding: 20px 0px 20px 0px;
+  margin: 0;
+}
+
+.answerButton:hover{
+  cursor: pointer;
+  background-color: lightskyblue;
+  transition: background-color 0.25s linear;
+}
+
+.answerButton:disabled{
+  cursor: default;
+  background-color: grey;
+  transition: none;
+}
+
+.info{
+  text-align: center;
+  font-size: 14px;
+}
+
+/* NEW QUESTION FORM */
+
+.newQuestionForm{
+  display: flex;
+  flex-direction: column;
+
+  align-items: center;
+}
+
+.newHeadline{
+  font-size: 21px;
+  margin-bottom: 10px;
+}
+
+.newSubline{
+  margin: 0px 0px 50px 0px;
+  color: grey;
+}
+
+.newInput{
+  border: 1px solid grey;
+  border-radius: 5px;
+  width: 400px;
+  padding: 12px 20px;
+  margin: 10px 0px 40px 0px;
+  box-sizing: border-box;
+}
+
+.newQuestionButton{
+  border: none;
+  color: white;
+  background-color: lightseagreen;
+  padding: 10px 20px 10px 20px;
+  font-size: 18px;
+  width: 100%;
+  margin: 0px 20px 0px 20px;
+  text-align: center;
+}
+
+.newQuestionButton:hover{
+  cursor: pointer;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.newQuestionButton:disabled{
+  cursor: default;
+  background-color: lightgrey;
+}
+
+/* Leaderboard */
+
+table{
+  border-collapse: collapse;
+  margin-top: 50px;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 20px;
+}
+
+th{
+  background-color: #dddddd;
+  font-weight: bold;
+  color: black;
+}
+
+.profileWrapper{
+  display:flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.leaderboardAvatar{
+  border-radius: 50%;
+  height: 40px;
+}
+
+.leaderboardUsernameWrapper{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  justify-content: center;
+}
+
+.leaderboardUserName{
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0;
+  padding: 0;
+}
+
+.leaderboardUserId{
+  font-weight: 14px;
+  font-weight: 400;
+  color: lightgrey;
+  margin: 0;
+  padding: 5px 0px 0px 0px;
+}
+
+/* LOGIN */
+
+.loginContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
